# event-based_object_catching_anymal

./: README.md  _config.yml  index.html
calibration/: calib_sees.yaml
rpg_dynamic_obstacle_detection/: CMakeLists.txt  DAVIS-03460003.yaml  package.xml
rpg_dynamic_obstacle_detection/bags/: .gitattributes  ball_throw_test_1.bag
rpg_dynamic_obstacle_detection/cfg/: DynamicObstacleDetection.cfg
rpg_dynamic_obstacle_detection/include/clustering/: dbscan.h  dbscan_opt.h
rpg_dynamic_obstacle_detection/include/rpg_dynamic_obstacle_detection/: average_timer.hpp  clustering.hpp  common.hpp  dbscan_wrapper.hpp  dvs_handler.hpp  dynamic_obstacle_detection.hpp  ellipsoid.hpp  image2world.hpp  imu_warp.hpp  measurement_statistics.hpp  normalized_mean_timestamp_image.hpp  optical_flow.hpp  param.hpp  sort_vectors.hpp  state.hpp  timer.h  timestamp_image_filter.hpp
rpg_dynamic_obstacle_detection/include/ze/common/: benchmark.hpp  buffer-inl.hpp  buffer.hpp  combinatorics.hpp  file_utils.hpp  macros.hpp  manifold.hpp  math.hpp  nonassignable.hpp  noncopyable.hpp  numerical_derivative.hpp  path_utils.hpp  random_matrix.hpp  ring_view.hpp  ringbuffer-inl.hpp  ringbuffer.hpp  running_statistics.hpp  running_statistics_collection.hpp  statistics.hpp  stl_utils.hpp  string_utils.hpp  test_entrypoint.hpp  test_manifold.hpp  thread_safe_fifo.hpp  time_conversions.hpp  timer.hpp  timer_collection.hpp  timer_statistics.hpp  transformation.hpp  types.hpp  versioned_slot_handle.hpp  yaml_serialization.hpp
rpg_dynamic_obstacle_detection/launch/: test_detection_and_fitting.launch  test_detection_only.launch
rpg_dynamic_obstacle_detection/parameters/: parameters.yaml
rpg_dynamic_obstacle_detection/rviz/: test_detection.rviz
rpg_dynamic_obstacle_detection/src/: clustering.cpp  dbscan.cpp  dbscan_opt.cpp  dbscan_stack.cpp  dbscan_wrapper.cpp  dvs_handler.cpp  dynamic_obstacle_detection.cpp  ellipsoid.cpp  image2world.cpp  imu_warp.cpp  measurement_statistics.cpp  normalized_mean_timestamp_image.cpp  optical_flow.cpp  timestamp_image_filter.cpp
rpg_dynamic_obstacle_detection/src/tests/: dbscan_test.cpp  ellipsoid_test.cpp  optical_flow_test.cpp  testing.cpp
rpg_dynamic_obstacle_detection_msgs/: CMakeLists.txt  package.xml
rpg_dynamic_obstacle_detection_msgs/msg/: BoundingBox2DStamped.msg  OpticalFlowImages.msg
rpg_ransac_parabola/: CMakeLists.txt  package.xml
rpg_ransac_parabola/launch/: playback_detections.launch  playback_detections_wo_node.launch
rpg_ransac_parabola/rviz/: ransac_visualization.rviz
rpg_ransac_parabola/src/: fit_parabola.py  image_writer.py  parabola_ransac_node.py  record_bbox_msgs.py  utils.py  visualize.py
