<?xml version="1.0"?>
<package format="2">
  <name>rpg_dynamic_obstacle_detection</name>
  <version>0.0.0</version>
  <description>A ROS package for detecting dynamic obstacles with a DVS sensor</description>

  <maintainer email="bforrai@ethz.ch">Benedek Forrai</maintainer>
  <!-- Using code from the Master Thesis of Kevin Kleber -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>dvs_msgs</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>image_geometry</depend>
  <depend>camera_info_manager</depend>
  <depend>rpg_dynamic_obstacle_detection_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>quadrotor_common</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>vision_msgs</depend>
  <depend>ransac_parabola</depend>

</package>
