<?xml version="1.0"?>
<package format="2">
	<name>rpg_dynamic_obstacle_detection_msgs</name>
	<version>0.0.0</version>
	<description>The rpg_dynamic_obstacle_detection_msgs package</description>
	<maintainer email="kkleber@ethz.ch">Kevin Kleber</maintainer>
	<license>GNU GPL</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>catkin_simple</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>vision_msgs</build_depend>


  <depend>message_runtime</depend>
	
	<export>
	</export>
</package>
