<?xml version="1.0"?>
<package format="2">
  <name>rpg_ransac_parabola</name>
  <version>0.0.0</version>
  <description>A ROS package for fitting parabolas on ball detections with RANSAC</description>
  <maintainer email="bforrai@ethz.ch">Benedek Forrai</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rpg_dynamic_obstacle_avoidance_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rpg_dynamic_obstacle_avoidance_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rpg_dynamic_obstacle_avoidance_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
